--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   "scripts": {
     "tests-install": [
       "vendor/bin/llms-tests teardown llms_blocks_tests root password localhost",
-      "vendor/bin/llms-tests install llms_blocks_tests root password localhost"
+      "vendor/bin/llms-tests install llms_blocks_tests root password localhost",
       "vendor/bin/llms-tests plugin lifterlms"
     ]
   }
