--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     }
   ],
   "require": {
-    "php": "^7.1",
-    "phpunit/phpunit": "^6"
+    "php": "^7.2 || ^8.0",
+    "phpunit/phpunit": "^7.5"
   },
   "require-dev": {},
   "bin": [
