--- a/composer.json
+++ b/composer.json
@@ -11,18 +11,17 @@
   ],
   "require": {
     "php": "^7.2 || ^8.0",
-    "phpunit/phpunit": "^7.5"
+    "phpunit/phpunit": "^7.5",
+    "wp-cli/wp-cli-tests": "^3.0.15",
+    "wp-cli/extension-command": "^2.1.0"
   },
-  "require-dev": {},
   "bin": [
     "bin/llms-tests",
     "bin/llms-env"
   ],
-  "scripts": {
-    "tests-install": [
-      "\"vendor/bin/llms-tests\" teardown llms_blocks_tests root password localhost",
-      "\"vendor/bin/llms-tests\" install llms_blocks_tests root password localhost",
-      "\"vendor/bin/llms-tests\" plugin lifterlms"
-    ]
+  "autoload-dev": {
+    "psr-4": {
+      "LifterLMS\\Tests\\": "src/"
+    }
   }
 }
