--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     "php": "^7.2 || ^8.0",
     "phpunit/phpunit": "^7.5",
     "wp-cli/wp-cli-tests": "^3.0.15",
-    "wp-cli/extension-command": "^2.1.0",
-    "yoast/phpunit-polyfills": "^1.0"
+    "wp-cli/extension-command": "^2.1.0"
   },
   "bin": [
     "bin/llms-tests",
