--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
   "require": {
     "php": "^7.2 || ^8.0",
     "phpunit/phpunit": "^7.5",
+    "yoast/phpunit-polyfills": "^1.0",
     "wp-cli/wp-cli-tests": "^3.0.15",
     "wp-cli/extension-command": "^2.1.0"
   },
