Allow Composer to run the PHP_CodeSniffer plugin.

--- a/composer.json
+++ b/composer.json
@@ -29,5 +29,10 @@
     "llms": {
       "version": "3.2.0"
     }
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
   }
 }
